# OpenMP

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  file_struct.txt  header_template.c  next.md  todo
OMP_Barrier/: OMP_Barrier.c
OMP_Sieve_Schedule/: OMP_Sieve_Schedule.c
docs/: openmp_reference.md  useful_links.md
docs/architecture/: false_sharing.md
old/: OMP_Barrier.c  OMP_Hello.c  OMP_Parallel_Sum_Comparison.c  OMP_Printf_Interleaving.c
old/Doc/: CPU.md  CPU_Cores_and_Logical_Processors.md  Pipeline_Stall.md
src/: header_template.c  omp_header_template.c
src/01_basics/: omp_data_sharing.c  omp_hello.c  omp_parallel_for.c  omp_reduction.c  omp_reduction_fp.c
src/02_synchronization/: omp_atomic_vs_critical.c  omp_barrier.c  omp_printf_interleaving.c
src/03_scheduling/: omp_schedule_demo.c  omp_schedule_demo_chunks.c  omp_schedule_profile.c  omp_schedule_profile_used_threads.c
src/04_performance/: omp_false_sharing.c  omp_false_sharing_array.c  omp_timing.c  omp_timing_reduce_max.c
src/05_advanced/: omp_reduction_fp_compensated.c  omp_reduction_fp_pairwise.c  omp_simd_intro.c  omp_tasks_depend.c  omp_tasks_depend.md  omp_tasks_intro.c  omp_tasks_pipeline_gantt.c  omp_tasks_pipeline_overlap.c
